<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.NewEntryActivity">

    <EditText
        android:id="@+id/editText_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_details"
        android:ems="10"
        android:gravity="top|start"
        android:hint="amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="Submit" />

    <segmented_control.widget.custom.android.com.segmentedcontrol.SegmentedControl
        android:id="@+id/control_incomeOrExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_amount"
        android:layout_margin="8dp"
        app:columnCount="2"
        app:distributeEvenly="true"
        app:radius="12dp"
        app:segments="@array/category_types"
        app:supportedSelectionsCount="1"
        app:textVerticalPadding="6dp" />


</RelativeLayout>