<resources>
    <string name="app_name">BudgeIt</string>
    <string name="action_settings">Settings</string>
    <string name="action_hide_expenses">Hide expenses</string>
    <string name="action_hide_income">Hide income</string>
    <string name="action_show_expenses">Show expenses</string>
    <string name="action_show_income">Show income</string>
    <string name="action_filter_by_date">Filter by date</string>
    <string name="action_remove_date_filter">Remove date filter</string>
    <string name="tab_entries">Entries</string>
    <string name="tab_categories">Categories</string>
    <string name="view">view</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="view_menu" />
    <string name="action_category_view" />
    <string name="bad">Was this an unnecessary expense?</string>
    <string name="recurring_entry">Is this a recurring entry?</string>
    <string name="recurring_message">This entry repeats every:</string>
    <string name="action_hide_savings">Hide savings</string>
    <string name="action_hide_budget">Hide budget</string>
    <string name="action_show_savings">Show savings</string>
    <string name="action_show_budget">Show budget</string>
    <string-array name="entry_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="weeks">weeks</string>
    <string name="days">days</string>
    <string name="show_all_recurring_expenses">Show only recurring expenses</string>
    <string name="show_all_recurring_incomes">Show only recurring incomes</string>
    <string name="show_all">Show all</string>
    <string-array name="category_types">
        <item>Savings</item>
        <item>Budget</item>
    </string-array>
</resources>
